apps/weather/kustomize/base/service.yaml
---
# Service
kind: Service
apiVersion: v1
metadata:
  name: weather
  labels:
    app: weather
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: weather
  sessionAffinity: None
