apps/weather/kustomize/base/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: weather
  labels:
    app: weather
spec:
  to:
    kind: Service
    name: weather
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
